Template base interno e Login e Logout

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,12 +2,19 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-  }
+    font-family: 'Roboto';
+}
 
-  main {
+main {
     flex: 1 0 auto;
-  }
+}
+header{
+    margin-bottom: 2%;
+}
 
+.roboto{
+    font-family: 'Roboto';
+}
 .roboto-black{
     font-weight: 900;
 }
@@ -31,3 +38,108 @@ body {
     padding: 0 20%;
 }
 
+.p-10{
+    padding: 10%;
+}
+
+
+.justify-center{
+    display: flex;
+    justify-content: center;
+}
+
+.flex-column{
+    flex-direction: column!important;
+}
+
+.fit{
+    object-fit: cover;
+    object-position: 100% 0;
+}
+
+.image-top-admin{
+    height: 54px;
+    width: 54px;
+}
+
+.pr-2{
+    padding-right: 2%;
+}
+
+
+
+
+/* ----------------------------------------------------------------------------------- */
+
+/* label color */
+.input-field label {
+    color: #000;
+  }
+  /* label focus color */
+  .input-field input[type=email]:focus + label {
+    color: #545445;
+  }
+  /* label underline focus color */
+  .input-field input[type=email]:focus {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* valid color */
+  .input-field input[type=email].valid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* invalid color */
+  .input-field input[type=email].invalid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #000;
+  }
+
+/* label color */
+.input-field label {
+    color: #000;
+  }
+  /* label focus color */
+  .input-field input[type=password]:focus + label {
+    color: #545445;
+  }
+  /* label underline focus color */
+  .input-field input[type=password]:focus {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* valid color */
+  .input-field input[type=password].valid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* invalid color */
+  .input-field input[type=password].invalid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+  }
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #000;
+  }
+
+  [type="checkbox"].filled-in:checked+span:not(.lever):after {
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000;
+    background-color: #000;
+    z-index: 0;
+}
+.sidenav-overlay{
+    width: 0;
+}
+
+
+.main-admin-container{
+    background-color: blue;
+}
