Criaçao de imagem - exibir public

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -70,6 +70,10 @@ header{
     color:black;
 }
 
+.pb-2{
+    padding-bottom: 2%;
+}
+
 
 
 /* ----------------------------------------------------------------------------------- */
