Exibindo avatar de usuario

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -74,6 +74,10 @@ header{
     padding-bottom: 2%;
 }
 
+.pt-5{
+    padding-top:  5%;
+}
+
 
 
 /* ----------------------------------------------------------------------------------- */
