--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -74,8 +74,8 @@ header{
     padding-bottom: 2%;
 }
 
-.pt-5{
-    padding-top:  5%;
+.mt-5{
+    margin-top: 5%;
 }
 
 
@@ -149,6 +149,41 @@ header{
 .sidenav-overlay{
     width: 0;
 }
+
+
+
+
+
+
+
+/* Team Thumbs */
+.text-overlay{
+    z-index: 99;
+    position: absolute;
+    margin-top: 10%;
+    margin-left: 1%;
+    font-family: 'Roboto';
+    font-weight: bold;
+    text-transform: uppercase;
+    align-self: center;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out;
+}
+
+.imgTeamIntegrant{
+    opacity: 1;
+}
+/* ************************************* */
+
+
+
+
+
+
+
+
+
+
 /* ---------------------------------------------------------------------------- */
 
 .jsutify-between{
