--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -151,11 +151,6 @@ header{
 }
 
 
-
-
-
-
-
 /* Team Thumbs */
 .text-overlay{
     z-index: 99;
@@ -230,6 +225,10 @@ header{
 
 .pt-1{
     padding-top: 1%!important;
+}
+
+.mr-1{
+    margin-right: 1rem;
 }
 
 
