--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -231,6 +231,11 @@ header{
     margin-right: 1rem;
 }
 
+.contact{
+    display: flex;
+    justify-content: space-between;
+}
+
 
 /* .main-admin-container{
     background-color: blue;
