--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -235,10 +235,33 @@ header{
     display: flex;
     justify-content: space-between;
 }
-
+blockquote{
+    margin: 20px 0;
+    padding-left: 1.5rem;
+    border-left: 5px solid #000; /* Just change the color value and that's it*/
+  }
 
 .pagination li.active {
     background-color: #000;
 }
 
-.tabs-content.carousel .carousel-item { height: 15vh!important; }
+
+.div-img-slide{
+    margin-right: 10%;
+    vertical-align: middle;
+    display: flex;
+}
+
+
+.text-carousel, .title-carousel{
+    text-align: justify;
+}
+
+.text-carousel{
+    /* max-height: 10vh; */
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    height: 10em;
+
+}
