--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -265,3 +265,21 @@ blockquote{
     height: 10em;
 
 }
+
+
+
+.switch label input[type=checkbox]:checked+.lever {
+    background-color: #000;
+  }
+
+  .switch label input[type=checkbox]:checked+.lever:after {
+    background-color: #000;
+  }
+
+
+.text-card{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    height: 10em;
+}
